# web_server_rust

./: Cargo.toml  README  build.rs
src/: cgi_server.rs  http_message.rs  lib.rs  macro_wrapper.c  macros.rs  main.rs  mutex.asm  server.rs  service.rs  sockclient.rs  sockets.rs  threads.rs  utils.rs  web_server.rs
